--- a/index.html
+++ b/index.html
@@ -8,13 +8,16 @@
     <title>Mario Jump</title>
 </head>
 <body>
+    <div class="hud">
+        <button id="start-btn">COMEÇAR</button>
+        <button id="restart-btn" style="display:none;">REINICIAR</button>
+        <span id="timer">00.0s</span>
+    </div>
     <div class="game-board">
         <img src="img/clouds.png" class="clouds">
         <img src="img/pipe.png" class="pipe">
         <img src="img/mario.gif" class="mario">
     </div>
-    <div>
-        <script src="script.js"></script>
-    </div>
+    <script src="script.js"></script>
 </body>
 </html>
